<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/input"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:id="@+id/input"
            android:textSize="25sp" android:textAlignment="textEnd"
            android:layout_marginTop="275dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/output"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:id="@+id/output" android:textSize="25sp" android:textAlignment="textEnd"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/input"/>
    <Button
            android:text="@string/zero"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/zero"
            app:layout_constraintStart_toStartOf="@+id/output" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/output"
            app:layout_constraintEnd_toStartOf="@+id/one" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/one"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/one"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/output" android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/add"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/add" app:layout_constraintStart_toEndOf="@+id/one"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/output" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/output" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/multiply"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/multiply" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/add" app:layout_constraintEnd_toEndOf="@+id/add"
            app:layout_constraintStart_toStartOf="@+id/add" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/divide"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/divide"
            app:layout_constraintStart_toStartOf="@+id/one"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/one"
            app:layout_constraintEnd_toEndOf="@+id/one"/>
    <Button
            android:text="@string/subtract"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/subtract"
            app:layout_constraintStart_toStartOf="@+id/zero"
            app:layout_constraintEnd_toEndOf="@+id/zero" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/zero"/>
    <Button
            android:text="@string/enterButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/submit" app:layout_constraintStart_toStartOf="@+id/subtract"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/divide"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/divide"/>
    <Button
            android:text="@string/deleteButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/delete" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/multiply" app:layout_constraintStart_toStartOf="@+id/multiply"
    />
    <Button
            android:text="@string/base10"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:id="@+id/base10" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/submit" app:layout_constraintStart_toStartOf="@+id/submit"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/delete"
            android:layout_marginEnd="8dp"/>

</android.support.constraint.ConstraintLayout>